# Quantifying-sustainability-in-fashion-

./: .gitignore  Care_Instruction_Reference.csv  Certification,_Reference.csv  Data.ipynb  FashionProductsDataset_Original.xlsx  LICENSE  ML_Product_Dataset.csv  Makefile  Material_Reference.csv  Model_Predict_Price.ipynb  Pricepredict1_clean.csv  README.md  Score_System.ipynb  Sustainability_Scoring_Dataset.csv  pyproject.toml  requirements.txt  sustainability_scores.csv  sustainability_scores.pkl
backend/: .gitignore  requirements.txt  train_model.py
backend/app/: main.py
backend/app/routers/: predict.py  products.py  reference.py  scoring.py
backend/app/schemas/: predict.py  product.py  reference.py
backend/app/services/: data_service.py  model_service.py  scoring_service.py
data/: Certification,_Reference.csv  FashionProductsDataset_Original.csv  ML_Product_Dataset.csv  Material_Reference.csv  Merged_product_dataset.csv  Origin_Reference.csv  Pricepredict1_clean.csv  Pricepredict2_clean.csv  df_ml_ready_for_model.csv  sustainability_scores.csv
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ProductCard.tsx  ScoreBreakdown.tsx  ScoreForm.tsx  ScoreGauge.tsx  index.ts
frontend/src/pages/: Home.tsx  ScoreProduct.tsx
frontend/src/types/: index.ts
notebooks/: Data.ipynb  Model_Predict_Price.ipynb
src/sustainability_scoring/: __init__.py
src/sustainability_scoring/data/: __init__.py  cleaner.py  loader.py
src/sustainability_scoring/models/: __init__.py  price_predictor.py
src/sustainability_scoring/reference/: __init__.py  care.csv  certifications.csv
tests/: __init__.py  test_calculator.py  test_cleaner.py  test_loader.py  test_price_predictor.py
(+2 files in other folders)
